tests/rosetta/out/C/averages-arithmetic-mean.error
cc: exit status 1
/tmp/averages-arithmetic-mean.c: In function ‘mean’:
/tmp/averages-arithmetic-mean.c:102:12: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  102 |     return (tmp_item_t){.ok = 0};
      |            ^
/tmp/averages-arithmetic-mean.c:110:10: error: incompatible types when returning type ‘tmp_item1_t’ but ‘int’ was expected
  110 |   return (tmp_item1_t){.ok = 1, .mean = sum / ((double)(v.len))};
      |          ^
/tmp/averages-arithmetic-mean.c: In function ‘mochi_main’:
/tmp/averages-arithmetic-mean.c:147:14: error: redefinition of ‘sets’
  147 |   list_float sets = list_float_create(8);
      |              ^~~~
/tmp/averages-arithmetic-mean.c:122:14: note: previous definition of ‘sets’ with type ‘list_float’
  122 |   list_float sets = list_float_create(8);
      |              ^~~~
/tmp/averages-arithmetic-mean.c:156:33: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  156 |   list_int sets_data[] = {tmp1, tmp2, sets, tmp3, sets};
      |                                 ^~~~
/tmp/averages-arithmetic-mean.c:156:39: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
  156 |   list_int sets_data[] = {tmp1, tmp2, sets, tmp3, sets};
      |                                       ^~~~
/tmp/averages-arithmetic-mean.c:156:45: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  156 |   list_int sets_data[] = {tmp1, tmp2, sets, tmp3, sets};
      |                                             ^~~~
/tmp/averages-arithmetic-mean.c:156:51: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
  156 |   list_int sets_data[] = {tmp1, tmp2, sets, tmp3, sets};
      |                                                   ^~~~
/tmp/averages-arithmetic-mean.c:157:17: error: conflicting types for ‘sets’; have ‘list_list_int’
  157 |   list_list_int sets = {5, sets_data};
      |                 ^~~~
/tmp/averages-arithmetic-mean.c:147:14: note: previous definition of ‘sets’ with type ‘list_float’
  147 |   list_float sets = list_float_create(8);
      |              ^~~~
/tmp/averages-arithmetic-mean.c:160:23: error: incompatible type for argument 1 of ‘_str’
  160 |     char *tmp5 = _str(v);
      |                       ^
      |                       |
      |                       list_int
/tmp/averages-arithmetic-mean.c:58:23: note: expected ‘int’ but argument is of type ‘list_int’
   58 | static char *_str(int v) {
      |                   ~~~~^
/tmp/averages-arithmetic-mean.c:163:26: error: incompatible type for argument 1 of ‘mean’
  163 |     __auto_type r = mean(v);
      |                          ^
      |                          |
      |                          list_int
/tmp/averages-arithmetic-mean.c:100:21: note: expected ‘list_float’ but argument is of type ‘list_int’
  100 | int mean(list_float v) {
      |          ~~~~~~~~~~~^
/tmp/averages-arithmetic-mean.c:164:10: error: ‘r’ undeclared (first use in this function)
  164 |     if ((r.data["ok"])) {
      |          ^
/tmp/averages-arithmetic-mean.c:164:10: note: each undeclared identifier is reported only once for each function it appears in
