tests/rosetta/out/C/averages-arithmetic-mean.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:33Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:32Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct {
  int ok;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ok;
  double mean;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int mean(list_float v) {
  if (v.len == 0) {
    return (tmp_item_t){.ok = 0};
  }
  __auto_type sum = 0.0;
  __auto_type i = 0;
  while (i < v.len) {
    sum = sum + v.data[i];
    i = i + 1;
  }
  return (tmp_item1_t){.ok = 1, .mean = sum / ((double)(v.len))};
}

int mochi_main() {
  list_int tmp1 = list_int_create(0);
  list_float tmp2 = list_float_create(6);
  tmp2.data[0] = 3.0;
  tmp2.data[1] = 1.0;
  tmp2.data[2] = 4.0;
  tmp2.data[3] = 1.0;
  tmp2.data[4] = 5.0;
  tmp2.data[5] = 9.0;
  list_float sets = list_float_create(8);
  sets.data[0] = 100000000000000000000.0;
  sets.data[1] = 3.0;
  sets.data[2] = 1.0;
  sets.data[3] = 4.0;
  sets.data[4] = 1.0;
  sets.data[5] = 5.0;
  sets.data[6] = 9.0;
  sets.data[7] = (-100000000000000000000.0);
  list_float tmp3 = list_float_create(15);
  tmp3.data[0] = 10.0;
  tmp3.data[1] = 9.0;
  tmp3.data[2] = 8.0;
  tmp3.data[3] = 7.0;
  tmp3.data[4] = 6.0;
  tmp3.data[5] = 5.0;
  tmp3.data[6] = 4.0;
  tmp3.data[7] = 3.0;
  tmp3.data[8] = 2.0;
  tmp3.data[9] = 1.0;
  tmp3.data[10] = 0.0;
  tmp3.data[11] = 0.0;
  tmp3.data[12] = 0.0;
  tmp3.data[13] = 0.0;
  tmp3.data[14] = 0.11;
  list_float sets = list_float_create(8);
  sets.data[0] = 10.0;
  sets.data[1] = 20.0;
  sets.data[2] = 30.0;
  sets.data[3] = 40.0;
  sets.data[4] = 50.0;
  sets.data[5] = (-100.0);
  sets.data[6] = 4.7;
  sets.data[7] = (-1100.0);
  list_int sets_data[] = {tmp1, tmp2, sets, tmp3, sets};
  list_list_int sets = {5, sets_data};
  for (int tmp4 = 0; tmp4 < sets.len; tmp4++) {
    list_int v = sets.data[tmp4];
    char *tmp5 = _str(v);
    char *tmp6 = concat_string("Vector: ", tmp5);
    printf("%s\n", tmp6);
    __auto_type r = mean(v);
    if ((r.data["ok"])) {
      char *tmp7 = _str(v.len);
      char *tmp8 = concat_string("Mean of ", tmp7);
      char *tmp9 = concat_string(tmp8, " numbers is ");
      char *tmp10 = _str(r.data["mean"]);
      char *tmp11 = concat_string(tmp9, tmp10);
      printf("%s\n", tmp11);
    } else {
      printf("Mean undefined\n");
    }
    printf("\n");
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
